--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -14,7 +14,7 @@ h2 {
 }
 .clear { clear: both; }
 body {
-	font-size: 14px;
+	 font-size: 14px;
     line-height: 1.8;
     color: #222;
     font-weight: 400;
@@ -24,12 +24,15 @@ body {
     background-size: cover;
     background-position: center center;
     padding: 115px 0;
+
 }
 .container  {
     width: 40%;
     position: relative;
     padding: 20px;
     margin:auto;
+    margin-top: 1.5%; //conforms with the nav height on big screens
+
 
 }
 .display-flex  {
